# geminicli2api

./: .gitignore  README_CN.md  main.py  pyproject.toml  runlog.md  start_server.bat  v1beta-models.json
docker版本/geminicli2api/: docker-compose.yml
