[project]
name = "geminicli2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-auth-oauthlib>=1.2.4",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]
